--- a/Seversk_(Tomskan_agj).mw
+++ b/Seversk_(Tomskan_agj).mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Severskan lidnanznam (Tomskan agj)
  | Flag text = Severskan flag (Tomskan agj)
  | Valdkund = Venäma
- | Eläjiden lugu = 107,498
- | Voz' = 2018
+ | Eläjiden lugu = 105,858
+ | Voz' = 2021
  | Pind = 18
  | Fail = Улица Солнечная в Северске.jpg
  | Pämez' = Grigorii Šamin<br />(reduku 2010—)
@@ -19,15 +19,29 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1949 kuti ''Počtkonor' nomer 5'' sauvomha [[uran (himine element)|uranan]] da [[plutonii|plutonijan]] küllästamižfabrikad. Kävutihe türmatud mehiden töid. Vl 1954 žilo sai lidnan statusad nügüdläiženke nimenke, no ''Tomsk-7'' oli oficialižikš vhesai 1989.
 
-Lidn šingotase Sibirin himižel kombinatal, kogoneb 4 tegimespäi. Sadas poltust atomstancijoiden täht i raketoiden südäimen täht, ut produkcijad (radioaktivižed substancijad i stabiližed izotopad). Toižed sarakod: sömtegimišt (maidtegim i leibtegim), stökoltegesiden pästand südäimeta, laivansauvomižen tegim, elektrojagamižapparaturan tehmine.
+Seversk šingotase Sibirin himižel kombinatal, kogoneb nelläs tegimespäi. Sadas poltust atomstancijoiden täht i raketoiden südäimen täht, ut produkcijad (radioaktivižed substancijad i stabiližed izotopad). Toižed sarakod: sömtegimišt (maidtegim i leibtegim), stökoltegesiden pästand südäimeta, laivansauvomižen tegim, elektrojagamižapparaturan tehmine.
 
 == Geografijan andmused ==
 Lidn sijadase [[Tom' (Obin ližajogi)|Tom'-jogen]] oiktal randal (Obin bassein da oiged randpol'), 90 m ü.m.t. keskmäižel korktusel. [[Tomsk]]-lidnan röun om 3,5 kilometras suvipäivnouzmha Severskan röunaspäi, voib sadas avtotel vai Tomin ülezjogen. Kuz' kontrol'punktad om aidos, sidä kesken koume Tomin randirdal. Lähembaine raudtestancii passažiroiden täht om ''Tomsk-II'' 8,5 kilometras.
 
-Kaks' žilod da koume pen't küläd mülüdas lidnümbrikho Severskan ližaks, ned ei olgoi sauptud lidnan erineden. Lidnankundan pind — 48,57 km².
+Kaks' žilod da koume pen't küläd mülüdas lidnümbrikho Severskan ližaks, ned ei olgoi sauptud lidnan erineden. Lidnümbrikon pind — 485,65 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 108 590 ristitud, lidnümbrikon — 115 331 ristitud. Kaikiš suremb lidnan ristitišt oli 119 500 eläjad vl 2001. Vl 2018 kaik 113 847 ristitud elädas lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 108 590 ristitud, lidnümbrikon — 115 331 ristitud. Kaikiš suremb lidnan ristitišt oli 119 500 eläjad vl 2001. Vl 2018 kaik 107 494 ristitud elihe lidnas i 113 847 ristitud kaikes lidnümbrikos.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Seversk checkpoint.jpg|Keskuzline kontrol'punkt avtotel (2010)
+Северск Ленин DSCN0211.jpg|Severskan lidnümbrikon administracijan sauvuz (2016)
+Seversk Kurchatova.jpg|Sibirin himižen kombinatan kontorad i Jumalanmaman Vladimiran jumalaižen jumalanpert', vn 2006 nägu
+Центральный вход природного парка.jpg|Londuseližen puišton keskuztulend (2009)
+Reactor EI-2.jpg|EI-2-reaktoran sauvuz vl 2010 (om azotadud vn 2008 kezakus, Sibirin himine kombinat)
+Северск Коммунистический 65 МИФИ DSCN0215.jpg|MIFI-universitetan filial (2016)
+Магазин "Малыш". Вид от "Радуги". - panoramio.jpg|Torguindkeskuz (2012)
+Детская больница. - panoramio (1).jpg|Lapsiden läžundkodi (2012)
+Северск. Дом культуры - panoramio.jpg|Kul'turkeskuz (2005)
+Северск IMG 1315.jpg|Keskuzline kontrol'punkt raudtel vl 2016
+</gallery>
 
 == Irdkosketused ==
 * [http://duma-seversk.ru/ «Seversk»-SATÜ:n Duman oficialine sait (''duma-seversk.ru'').] {{ref-ru}}
