--- a/Streževoi.mw
+++ b/Streževoi.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Streževoin lidnanznam
  | Flag text =
  | Valdkund = Venäma
- | Eläjiden lugu = 41,541
- | Voz' = 2018
+ | Eläjiden lugu = 39,903
+ | Voz' = 2021
  | Pind = 31.48
  | Fail = Strezhevoy, Tomsk Oblast, Russia - panoramio (2).jpg
- | Pämez' = Valerii Harahorin<br />(keväz'ku 2009—)
+ | Pämez' = Valerii Deničenko<br />(reduku 2021—)
  | Telefonkod = +7-38259-xx-xxx
  | Avtokod = 70
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
@@ -19,7 +19,7 @@
 == Istorii ==
 Ende [[hantilaižed|hantin]] küläd i kalanpüdajiden ''Streževoje-külä'' (vspäi 1932) oliba olmas necil sijal. Nügüdläižen eländpunktan aluz om pandud vl 1966 kuti [[kivivoi]]n sadajiden žilo, nimitihe külän mödhe. 1960-nziden voziden lopus tedotihe žilod kaiken [[Nevondkundaline Ühtištuz|NSTÜ:n]] Komsomolan udarnikoiden sauvondaks. Radnikžilo sai lidnan statusad agjan alištusenke vn 1978 5. päiväl sulakud.
 
-Lidn šingotase kivivoin tedištelendal da samižel sen ümbrištos, kivivoinümbriradajal tegimel, kivivoin samižmašiništon tegimel, gazanveimiden i kivivoiveimiden sauvondan da holitusen (lendimport) edheotandoil.
+Streževoi šingotase kivivoin tedištelendal da samižel sen ümbrištos, kivivoinümbriradajal tegimel, kivivoin samižmašiništon tegimel, gazanveimiden i kivivoiveimiden sauvondan da holitusen (lendimport) edheotandoil.
 
 == Geografijan andmused ==
 Lidn sijadase [[Ob'|Obinjogen]] oiktan Pasol-hijaman oiktal randal, 41 m ü.m.t. keskmäižel korktusel. Matkad [[Hantin da Mansin avtonomine ümbrik|Hantin da Mansin avtonomižen ümbrikon]] röunhasai om 10 km pohjoižhe orhal, [[Tomsk]]hasai om 635 km suvipäivnouzmha orhal, 2 416 km avtotedme (tal'vte om olmas) vai Obin ülezjogen. Lähembaine lidn da raudtestancii om [[Nižnevartovsk]] (Hantin da Mansin avtonomine ümbrik) 63 km lodeheze avtotedme. Jogiport sijadase 6 kilometras lidnaspäi, lendimport eläb bankrotnendan proceduras läbi vspäi 2016.
@@ -27,12 +27,25 @@ Lidn sijadase [[Ob'|Obinjogen]] oiktan Pasol-hijaman oiktal randal, 41 m ü.m.t.
 Streževoi om lidnümbrikon üks'jäine eländpunkt. Lidnankundan pind — 212,97 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 42 219 ristitud. Kaikiš suremb lidnan ristitišt om vspäi 1989, enamba 40 tuhad eläjid (44 600 rist. vl 1998 i 44 693 rist. vl 2009). Ortodoksižen hristanuskondan ph. Mikulai-čudonsädajan jumalanpert', protestantizman «Elon vajeh»-keskuz i islaman «Al'-Hajat»-pühäpert' oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 42 219 ristitud. Kaikiš suremb lidnan ristitišt om vspäi 1989, enamba 40 tuhad eläjid (44 600 rist. vl 1998 i 44 693 rist. vl 2009).
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Mikulai-čudonsädajan jumalanpert', [[protestantizm]]an «Elon vajeh»-keskuz i [[islam]]an «Al'-Hajat»-pühäpert' oma olmas lidnas.
 
 Professionaližen opendusen aluzkundad: «Tomskneft'»-kompanijan openduzkombinat, Žirnovskan kivivointehnikuman filial, Tomskan tegimištoliž-gumanitarižen kolledžan filial, üläopendusen aluzkundoiden koume filialad (Piter, Tümen').
 
+Edeline lidnümbrikon pämez' om Valerii Harahorin (keväz'ku 2009 — sügüz'ku 2021).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Стрежевой (10).JPG|Lidnan administracijan sauvuz (2011)
+Strezhevoy Oil Refinery plant - panoramio.jpg|Streževoin kivivoiümbriradai tegim («Tomskneft'») vl 2011
+Стрежевой (9).JPG|Čomamahtoiden «Sovremennik»-pert'kulu (2011, ''Aigalaine'')
+Стрежевой, СОК "Нефтяник" ( Спортивно Оздоровительнй Комплекс) - panoramio.jpg|Sportivine «Neftänik»-tervehtamižkompleks (2011, ''Kivivoinik'')
+Стрежевой (2).jpg|Streževoi-lendimportan sauvuz vl 2013
+</gallery>
+
 == Irdkosketused ==
-* [http://admstrj.tomsk.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''admstrj.tomsk.ru'').] {{ref-ru}}
+* [http://admstrj.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''admstrj.ru'').] {{ref-ru}}
 {{Commons|Category:Strezhevoy}}
 
 {{Tomskan agjan lidnad}}
