Replacing Michael_Kalashikov.jpg with [[File:Michael_Kalashnikov.jpg]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR3|Criterion 3]] (obvious error) · last name contains an "N").

--- a/Kalašnikov_Mihail.mw
+++ b/Kalašnikov_Mihail.mw
@@ -1,5 +1,5 @@
 {{Personalii
-| изображение = Michael Kalashikov.jpg
+| изображение = Michael Kalashnikov.jpg
 | описание изображения = Mihail Kalašnikov vl [[2009]]
 }}
 '''Mihail Timofejevič Kalašnikov''' ({{lang-ru|Михаил Тимофеевич Калашников}}; sünd. [[10. kül'mku]] [[1919]], [[Kur'j (Altajan rand)|Kur'j-külä]], [[Altajan gubernii]], [[Venäman valdkund (1918-1920)|Venäman valdkund]] — kol. [[23. tal'vku]] [[2013]], [[Iževsk]], [[Udmurtijan Tazovaldkund]], [[Venäma]]) oli [[NSTÜ|nevondkundaline]] i [[Venäma|venämalaine]] ambund[[azeg]]iden [[konstruktor|inžener-konstruktor]], [[tehnižiden tedoiden doktor]] (1971), [[leitnantjenaral]] (1999).
