--- a/Asino.mw
+++ b/Asino.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text =
  | Flag text =
  | Valdkund = Venäma
- | Eläjiden lugu = 24,354
- | Voz' = 2018
+ | Eläjiden lugu = 24,442
+ | Voz' = 2021
  | Pind =
  | Fail = Asino, street scene.jpg
  | Pämez' = Andrei Kostenkov<br />(sügüz'ku 2017—)
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1896 kuti ''Ksen'jevk-žilo'' ({{lang-ru|Ксеньевка}}) elänzoitmaha tahod (sirdnikoiden žilo), möhemba ''Ksenievskii'', nimitihe [[Nikolai II Verekaz|Nikolai II-imperatoran]] Ksenija-sizaren oiktastuseks. Udesnimitihe uden Asino-raudtestancijan mödhe vl 1933, raudtelikund vn 1937 tal'vkuspäi. Kätihe radnikžiloks vn 1945 12. päiväl tal'vkud. Asino-radnikžilo sai lidnan statusad vn 1952 31. päiväl keväz'kud. Vspäi 1973 oli alištunu agjan tobmudele oikti.
 
-Lidn šingotase mecan ümbriradmižen tegimil: [[faner]]an tehmine, špon koivuspäi, MDF-apak, mugažo [[mebel'|meblin]] pästandal (ištmiden fabrik), leibäntegim i kombisömän tegim ratas.
+Asino šingotase mecan ümbriradmižen tegimil: [[faner]]an tehmine, špon koivuspäi, MDF-apak, mugažo [[mebel'|meblin]] pästandal (ištmiden fabrik), leibäntegim i kombisömän tegim ratas.
 
 == Geografijan andmused ==
 Lidn sijadase [[Čulim (Obin ližajogi)|Čulim-jogen]] hural randpolel i sen huran Terav Kurj-ližajogen oiktal randal ({{lang-ru|Быстрая Курья}}, 109 m ü.m.t. keskmäižel korktusel. Matkad [[Tomsk]]hasai om 92 km suvipäivlaskmha orhal, 112 km avtotedme vai 93 km raudtedme. Toine lähembaine lidn om [[Anžero-Sudžensk]] (Kemerovon agj) 103 km suvhe orhal vai 134 km avtotedme.
@@ -27,9 +27,20 @@ Lidn sijadase [[Čulim (Obin ližajogi)|Čulim-jogen]] hural randpolel i sen hur
 Asino om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 90 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 25 618 ristitud, rajonan seičeme kümnendest. Kaikiš suremb ristitišt oli 33 741 eläjad vl 1989. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Pühän Jumalanmaman Katken puine jumalanpert' om olmas lidnas vspäi 1976, toine kivine pühäpert' om saudud vll 2012−2018.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 25 618 ristitud, rajonan seičeme kümnendest. Kaikiš suremb ristitišt oli 33 741 eläjad vl 1989.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Pühän Jumalanmaman Katken puine jumalanpert' om olmas lidnas vspäi 1976, toine kivine pühäpert' om saudud vll 2012−2018.
 
 Professionaližen opendusen aluzkundad: Asinon tegimištoližen industrijan da holitusen tehnikum, Tomskan agrarižen kolledžan filial i Tomskan valdkundaližen arhitekturiž-sauvonduniversitetan filial.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+АМС Асино.jpg|Lidnan i rajonan administracijan sauvuz (oiktalpäi, 2013)
+Industry in Asino, Russia.jpg|Tegim Asinos vl 2009
+Asino, Tomskaya oblast, Russia..jpg|Torguindan keskuz i kirjišt (2009)
+Универсам "Сибиряк" - panoramio.jpg|«Sibiräk»-universam (2009, ''Sibirilaine'')
+Вокзал Асино.jpg|Asino-päraudtestancijan sauvuz (2009)
+</gallery>
 
 == Irdkosketused ==
 * [http://www.gorodasino.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''gorodasino.ru'').] {{ref-ru}}
