--- a/Kedrovii_(Tomskan_agj).mw
+++ b/Kedrovii_(Tomskan_agj).mw
@@ -5,10 +5,10 @@
  | Lidnanznam text = Kedrovijan lidnanznam
  | Flag text = Kedrovijan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 2,034
- | Voz' = 2018
+ | Eläjiden lugu = 1,918
+ | Voz' = 2021
  | Pind =
- | Fail =
+ | Fail = Кедровый Красноярский Край 20200816 0004 (cropped).jpg
  | Pämez' = Nelli Solovjova<br />(keväz'ku 2015—)
  | Telefonkod = +7-38250-xx-xxx
  | Avtokod = 70
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1982 kuti [[londuseline gaz|londuseližen gazan]] i [[kivivoi]]n tedištelendan da sadajiden žilo, nimitihe ümbärdajan kanghan (kedrpedai) mödhe. Valitihe sijad enččen rajonan Pudino-žilo-keskusenno. Kedrovii sai lidnan statusad agjan alištusenke vl 1987.
 
-Lidn om Pudinon kivivoigazansamižen rajonan keskuz, šingotase kivivoin tedištelendal da samižel sen ümbrištos i kivivoiveimen holitusel.
+Kedrovii-lidn om Pudinon kivivoigazansamižen rajonan keskuz, šingotase kivivoin tedištelendal da samižel sen ümbrištos i kivivoiveimen holitusel.
 
 == Geografijan andmused ==
 Lidn sijadase Čuzik-jogen oiktal randal ([[Ob'|Obinjogen]] hurapol'ne bassein), 100 m ü.m.t. keskmäižel korktusel. Matkad [[Novosibirskan agj]]an röunhasai om 70 km suvhe orhal, [[Tomsk]]hasai om 347 km suvipäivnouzmha orhal vai 451 km avtotedme (sidä kesken tal'vtedme 150 km pitte). Lähembaine lidn om [[Kolpaševo]] 215 km pohjoižpäivnouzmha orhal vai 380 km avtotedme (sidä kesken tal'vtedme). Lendimport radab, punolendimed lendletas vahtžiloihesai, voib sadas [[Streževoi]]- i [[Kolpaševo]]-lidnoihesai.
@@ -27,7 +27,9 @@ Lidn sijadase Čuzik-jogen oiktal randal ([[Ob'|Obinjogen]] hurapol'ne bassein),
 Kuz' žilod mülüdas lidnümbrikho Kedrovijan ližaks. Lidnankundan pind — 1 697 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 2 451 ristitud, lidnümbrikon — 3 948 ristitud. Kaikiš suremb lidnan ristitišt oli 5 500 eläjad vl 1996. Kaik 3 199 ristitud elädas lidnümbrikos vl 2018. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Sergii Radonežalaižen jumalanpert' om saudud vll 2008−2017.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 2 451 ristitud, lidnümbrikon — 3 948 ristitud. Kaikiš suremb lidnan ristitišt oli 5 500 eläjad vl 1996. Kaik 3 199 ristitud elihe lidnümbrikos vl 2018.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Sergii Radonežalaižen jumalanpert' om saudud vll 2008−2017.
 
 == Irdkosketused ==
 * [http://www.kedradm.tomsk.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''kedradm.tomsk.ru'').] {{ref-ru}}
