--- a/Kolpaševo.mw
+++ b/Kolpaševo.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Kolpaševon lidnanznam
  | Flag text =
  | Valdkund = Venäma
- | Eläjiden lugu = 23,180
- | Voz' = 2018
+ | Eläjiden lugu = 22,589
+ | Voz' = 2021
  | Pind = 35
  | Fail = Kolpashevsky minibus.jpg
  | Pämez' = Aleksei Ščukin<br />(sügüz'ku 2016—)
@@ -14,12 +14,12 @@
  | Avtokod = 70
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-'''Kolpaševo''' ({{lang-ru|Колпашево}}) om [[Venäma]]n lidn da lidnankund [[Tomskan agj]]an keskuzpalas. Se om [[Kolpaševon rajon]]an administrativine keskuz.
+'''Kolpaševo''' ({{lang-ru|Колпа́шево}}) om [[Venäma]]n lidn da lidnankund [[Tomskan agj]]an keskuzpalas. Se om [[Kolpaševon rajon]]an administrativine keskuz.
 
 == Istorii ==
 Eländpunktan aluz om pandud 17. voz'sadan augotišes, nimitihe alusenpanijoiden Kolpašnikovad-valdkundmehiden kanzannimen mödhe. Vspäi 1878 oli žiloks, 1933 kätihe radnikžiloks. Kolpaševo sai lidnan statusad vl 1938. Oli Nariman ümbrikon administrativižeks keskuseks (1932−1944). Vll 1941−1943 Novosibirskan pedagogine institut oli evakuiruidud tänna, ičeze opendajiden institut oli avaitud vl 1940 i oli olmas vhesai 1956.
 
-Lidn šingotase «Metallist»-kabel'tegimel i sömtegimištol (leibänkombinat, kalategim, mineralvezi), gazanveimiden sauvondan da holitusen (lendimport) edheotandoil.
+Kolpaševo šingotase «Metallist»-kabel'tegimel i sömtegimištol (leibänkombinat, kalategim, mineralvezi), gazanveimiden sauvondan da holitusen (lendimport) edheotandoil.
 
 == Geografijan andmused ==
 Lidn sijadase [[Ob'|Obinjogen]] oiktal randal, 65 m ü.m.t. keskmäižel korktusel. Matkad [[Tomsk]]hasai om 237 km suvipäivnouzmha orhal, 318 km avtotedme vai Obin ülezjogen. Toižed lähembaižed lidnad oma [[Asino]] 240 km i [[Seversk (Tomskan agj)|Seversk]] 224 km suvipäivnouzmha orhal, [[Kedrovii (Tomskan agj)|Kedrovii]] 215 km suvipäivlaskmha orhal vai 380 km avtotedme (sidä kesken tal'vtedme). Lähembaine raudtestancii sijadase Vauged Jar-žilos 145 km päivnouzmha avtotedme.
@@ -27,9 +27,20 @@ Lidn sijadase [[Ob'|Obinjogen]] oiktal randal, 65 m ü.m.t. keskmäižel korktus
 Togur-žilo (7 051 rist. vl 2015) da kaks' pen't küläd (Volkovo, Sever) mülüdas lidnankundha Kolpaševon ližaks. Lidnankundan pind — 909,06 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 24 124 ristitud, lidnankundan — 32 001 ristitud, rajonan nell' videndest. Kaikiš suremb lidnan ristitišt oli 31 319 eläjad vl 1989. Vl 2017 kaik 30 502 ristitud elihe lidnankundas. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Voznesen'jan päjumalanpert' om saudud vll 2007−2014.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 24 124 ristitud, lidnankundan — 32 001 ristitud, rajonan nell' videndest. Kaikiš suremb lidnan ristitišt oli 31 319 eläjad vl 1989. Vl 2017 kaik 23 272 ristitud elihe lidnas i 30 502 ristitud kaikes lidnankundas.
 
-Professionaližen opendusen aluzkundad: Kolpaševon socialiž-tegimištoline kolledž, Tomskan maižanduztehnikuman filial, Tomskan medicinižen i pedagogižen kolledžiden filialad.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Sündun Voznesen'jan kafedraline päjumalanpert'<ref>[http://sobory.ru/geo/locat/22451 Kolpaševon pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om saudud vll 2005−2013.
+
+Professionaližen opendusen aluzkundad: Kolpaševon socialiž-tegimištoline kolledž<ref>[https://kspk-kolpashevo.ru/ Kolpaševon socialiž-tegimištoližen kolledžan sait (''kspk-kolpashevo.ru'').] {{ref-ru}}</ref>, Tomskan maižanduztehnikuman filial, Tomskan medicinižen i pedagogižen kolledžiden filialad.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Колпашево.JPG|TV-mačt Kolpaševo-lidnas (2014)
+Ferry in Kolpashevo.jpg|Ehtatim Obiš päliči vl 2011
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.kolpsite.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''kolpsite.ru'').] {{ref-ru}}
