--- a/Severobaikal'sk.mw
+++ b/Severobaikal'sk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Severobaikal'skan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 23,673
- | Voz' = 2017
+ | Eläjiden lugu = 23,304
+ | Voz' = 2021
  | Pind = 110.54
  | Fail = Центр Северобайкальска.jpg
- | Pämez' = ''sija om vakantine''<br />(keväz'ku 2018—)
+ | Pämez' = Oleg Kotov<br />(sulaku 2018—)
  | Telefonkod = +7-30130-xx-xxx
  | Avtokod = 03
  | Aigvö = [[UTC]]+8 ([[MSK]]+5)
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1974 kuti [[Baikalan-Amuran magistral'|BAM:an]] raudtestancii i kangazpertiden žilo. Vn 1975 sügüz'kul registriruihe Severobaikal'sk-radnikžilod. Se sai lidnan statusad vl 1980. Planiruihe lidnad 140 tuhazesai eläjiden lugun mödhe.
 
-Lidn šingotase kalanümbriradajan tegimel, raudten i mectegimišton edheotandoil, turizmal (termaližed purtked).
+Severobaikal'sk šingotase kalanümbriradajan tegimel, raudten i mectegimišton edheotandoil, turizmal (termaližed purtked).
 
 == Geografijan andmused ==
 Lidn sijadase [[Baikal]]an pohjoižrandal, 500 m ü.m.t. keskmäižel korktusel, voib olda lujid manrehkaidusid. Matkad [[Ulan Ude]]hesai om 440 km suvhe orhal. Lähembaižed lidnad oma Irkutskan agjan [[Ust'-Kut]] 255 km päivlaskmha-lodeheze orhal, raudtedme vai 345 km avtotedme i [[Kirensk]] 250 km lodeheze-pohjoižhe orhal vai 410 km avtotedme. Regionaline lendimport sijadase 25 km pohjoižpäivnouzmha Nižneangarsk-žilos. Kezaaigan voib sadas [[Irkutsk]]hasai lämuzlaival järvedme.
@@ -27,10 +27,24 @@ Lidn sijadase [[Baikal]]an pohjoižrandal, 500 m ü.m.t. keskmäižel korktusel,
 Severobaikal'sk om lidnümbrikon üks'jäine eländpunkt. Lidnümbrikon pind — 110,54 km².
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 24 929 ristitud. Kaikiš suremb ristitišt oli 30 700 eläjad vl 1987. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Kazanin jumalaižen pühäpert' om saudud vl 2009.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 24 929 ristitud. Kaikiš suremb ristitišt oli 30 700 eläjad vl 1987.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Kazanin jumalaižen kafedraline päjumalanpert'<ref>[http://sobory.ru/geo/locat/15974 Severobaikal'skan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om saudud vodele 2009.
+
+== Galerei ==
+<gallery mode="packed-hover" heights="125px">
+Здание администрации Северобайкальска..jpg|Lidnan administracijan sauvuz (oiktalpäi, 2007)
+Северобайкальск 02.jpg|Poliklinik (2009)
+Пляж в городе Северобайкальск.jpg|Kül'bendrand vl 2012
+Северобайкальск, порт - panoramio.jpg|Portan valdmad vl 2004
+Severobaikalsk station - panoramio.jpg|Severobaikal'sk-päraudtestancii vl 2014
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
-* [http://www.sbk03.ru/ Municipaližen «Severobaikal'sk-lidn»-ühtnikan tobmuden aluzkundoiden oficialine sait (''sbk03.ru'').] {{ref-ru}}
+* [http://egov-buryatia.ru/gsevbk/ Municipaližen «Severobaikal'sk-lidn»-ühtnikan tobmuden lehtpoled Burätijan Tazovaldkundan oficialižel ''egov-buryatia.ru''-saital.] {{ref-ru}}
 {{Commons|Category:Severobaykalsk}}
 
 {{Burätijan Tazovaldkundan lidnad}}
