toine olii kuva, formitez

--- a/Seul.mw
+++ b/Seul.mw
@@ -14,7 +14,7 @@
  | Telefonkod = +82-2
  | Aigvö = [[UTC]]+9
 }}
-[[Fail:01-00-seoul-en.svg|thumb|left|250px|Lidnan ümbrikod.]]
+[[Fail:01-00-seoul-en.svg|thumb|left|250px|Lidnan ümbrikod]]
 [[Fail:Brand Slogan of Seoul (2006–2016).svg|thumb|right|200px|Lidnan deviz]]
 '''Seul''' ({{lang-ko|서울}} ''Seul'' [sʰʌ.ul] — «Pälidn») om [[Korejan Tazovaldkund]]an pälidn da kaikiš suremb lidn, sen ristitišt om läz 10 mln. ristituid. Lidn om eriliženke statusanke administrativižešti i üks'jäine mugoine valdkundas, mülüdas sidä statistižhe [[Seulan rahvahaližen pälidnan region|Pälidnaižhe regionha]] (Sudogvon).
 
@@ -47,13 +47,13 @@ Vl 1988 Seul vastsi 20. [[Kezaolimpiad|Kezaližid Olimpiadvändoid]].
 Vl 2002 lidn ühtni Mail'man futbolan čempionatha, sen vändoiden ühteks sijišpäi.
 
 == Galerei ==
-<center><gallery>
-|Lidnan ohjastusen pert'
-Fail:Gangnam Seoul January 2009.jpg|Azjaline Kannam-rajon (angl. ''Gangnam-gu'')
-Fail:경복궁 전경.jpg|Pert'kuluiden Könbok-kompleks (1394)
-Fail:Lotte World Tower at sunset.jpg|Üläkorged Lotto-sauvuz i Džamsin-raudtesild Han-joges päliči
-Fail:View from COEX Tower.jpg|Olimpine stadion sen ümbrištonke
-</gallery></center>
+<gallery mode="packed" heights="125px">
+City Hall of Seoul.jpg|Lidnan ohjastusen pert' (2012, vanh i uz', kaks' sauvust ezimal)
+Gangnam Seoul January 2009.jpg|Azjaline Kannam-rajon ({{lang-en|Gangnam-gu}})
+경복궁 전경.jpg|Pert'kuluiden Könbok-kompleks (om saudud vl 1394)
+Lotte World Tower at sunset.jpg|Üläkorged Lotto-sauvuz i Džamsin-raudtesild Han-joges päliči
+View from COEX Tower.jpg|Olimpine stadion sen ümbrištonke
+</gallery>
 
 == Homaičendad ==
 <references />
