--- a/Babuškin_(Burätii).mw
+++ b/Babuškin_(Burätii).mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Babuškinan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 4,542
- | Voz' = 2017
+ | Eläjiden lugu = 4,385
+ | Voz' = 2021
  | Pind = 9
  | Fail = Babushkin street.jpeg
- | Pämez' = Viktor Larüškin (2008—)
+ | Pämez' = Leonid Seliverstov<br />(reduku 2018—)
  | Telefonkod = +7-30138-xx-xxx
  | Avtokod = 03
  | Aigvö = [[UTC]]+8 ([[MSK]]+5)
@@ -17,7 +17,9 @@
 '''Babuškin''' ({{lang-ru|Бабушкин}}, {{lang-bua|Баабушкин хото}}) om [[Venäma]]n lidn da lidnankund [[Burätijan Tazovaldkund]]an keskuzpalan päivlaskmas. Mülüb [[Kabanskan rajon]]ha, sen üks'jäine lidn.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1760 kuti Posol'skii-jumalankodin ''Misovskii-žilo''. Se sai lidnan statusad vl 1902, nimitihe ''Misovsk''. Vll 1925−1941 oli radnikžiloks, vspäi 1927 mülüb Burätijha. Vn 1941 18. päiväl vilukud sai lidnan statusad tošti udenke nimenke Ivan Babuškin-revolücioneran oiktastuseks (amptihe täs vl 1906). Lidn šingotase rel'soiden ühthekeitandtegimel.
+Eländpunktan aluz om pandud vl 1760 kuti Posol'skii-jumalankodin ''Misovskii-žilo''. Se sai lidnan statusad vl 1902, nimitihe ''Misovsk''. Vll 1925−1941 oli radnikžiloks, vspäi 1927 mülüb Burätijha. Vn 1941 18. päiväl vilukud sai lidnan statusad tošti udenke nimenke Ivan Babuškin-revolücioneran oiktastuseks (amptihe täs vl 1906).
+
+Babuškin-lidn šingotase rel'soiden ühthekeitandtegimel.
 
 == Geografijan andmused ==
 Lidn sijadase [[Baikal]]an suvirandal, 470 m ü.m.t. keskmäižel korktusel (13 m Baikalan pindan korktemb). Pen' Misovk-jogi läbitab lidnad. Matkad [[Kabansk]]-žilo-rajonkeskushesai om 66 km pohjoižpäivnouzmha orhal vai 73 km «Baikal»-avtotrassadme (R-258), [[Ulan Ude]]hesai — 170 km päivnouzmha. ''Misovai''-raudtestancii radab [[Transsib]]al.
@@ -25,10 +27,20 @@ Lidn sijadase [[Baikal]]an suvirandal, 470 m ü.m.t. keskmäižel korktusel (13 
 Bojarskii-žilo raudtestancijanno i Manturih-žilo mülüdas lidnankundha Babuškinan ližaks. Lidnankundan pind — 1 718,57 km².
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 4 831 ristitud, lidnankundan — 5 064 ristitud, rajonan kaks'toštkümnendez. Kaikiš suremb lidnan ristitišt oli 8 238 eläjad vl 1959. Vl 2017 kaik 4 778 ristitud elihe lidnankundas.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 4 831 ristitud, lidnankundan — 5 064 ristitud, rajonan kaks'toštkümnendez. Kaikiš suremb lidnan ristitišt oli 8 238 eläjad vl 1959. Vl 2017 kaik 4 542 ristitud elihe lidnas, 4 778 ristitud kaikes lidnankundas.
+
+Edeline lidnan pämez' om Viktor Larüškin (2008 — reduku 2018).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Музей города Бабушкин.jpg|Lidnan muzei (2017)
+Бабушкин, улица III Интернационала, 35, 1.jpg|Keskškol (2018)
+Бабушкин, здание паровозного депо, 1.jpg|Istorine vedimdepo Misovai-raudtestancijan vagzalan kohtas vl 2018
+Train-station Babushkin-WV.jpg|Misovai-päraudtestancijan sauvuz vl 2019
+</gallery>
 
 == Irdkosketused ==
-* [http://мысовскъ-бабушкин.рф/ Lidnankundan tobmuden aluzkundoiden oficialine sait (''мысовскъ-бабушкин.рф'').] {{ref-ru}}
+* [http://babushkin-gp.ru/ Lidnankundan tobmuden aluzkundoiden oficialine sait (''babushkin-gp.ru'').] {{ref-ru}}
 {{Commons|Category:Babushkin}}
 
 {{Burätijan Tazovaldkundan lidnad}}
