--- a/Gusinoozörsk.mw
+++ b/Gusinoozörsk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = 
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 23,280
- | Voz' = 2017
+ | Eläjiden lugu = 23,263
+ | Voz' = 2021
  | Pind = 
- | Fail = Гусиноозерск.jpg
- | Pämez' = Andrei Kudräšov (2008—)
+ | Fail = Гусиноозёрск (5).jpg
+ | Pämez' = Andrei Kudräšov<br />(2008—)
  | Telefonkod = +7-30145-xx-xxx
  | Avtokod = 03
  | Aigvö = [[UTC]]+8 ([[MSK]]+5)
@@ -25,11 +25,21 @@ Lidn sijadase katl'uses, Hanh'järven pohjoižpäivnouzmaižel randal. Matkad [[
 Klimat om terav kontinentaline. Kaks' pen't žilod mülüdas lidnankundha lidnan ližaks: Zagustai-žilo raudtestancijanno i Jarventagaine-žilo ({{lang-ru|Заозёрный}}, enzne sodalidnut).
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 23 588 ristitud, lidnankundan — 24 582 ristitud, rajonan nell' seičemendest. Kaikiš suremb lidnan ristitišt oli vl 1997 — 32 800 eläjad. Vl 2017 kaik 24 564 ristitud elihe lidnankundas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 23 588 ristitud, lidnankundan — 24 582 ristitud, rajonan nell' seičemendest. Kaikiš suremb lidnan ristitišt oli 32 800 eläjad vl 1997. Vl 2017 kaik 23 280 ristitud elihe lidnas, 24 564 ristitud kaikes lidnankundas.
 
-Buddizman kaks' [[dacan]]ad (jumalankodi i jumalanpert'), ortodoksižen hristanuskondan jumalanpert' oma lidnas da läz sidä.
+[[Buddizm]]an kaks' [[dacan]]ad (jumalankodi i pühäpert'), [[ortodoksine hristanuskond|ortodoksižen hristanuskondan]] ph. Jurgii Vägestusenkandajan jumalanpert' oma lidnas da läz sidä.
 
-Gusinoozerskan GRES i energetine tehnikum oma lidnas.
+Gusinoozerskan GRES i energetine tehnikum<ref>[http://gusteh.profiedu.ru/ Gusinoozerskan energetižen tehnikuman sait (''gusteh.profiedu.ru'').] {{ref-ru}}</ref> oma lidnas.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Гусиноозёрск. Администрация Селенгинского района.JPG|[[Selengan rajon]]an administracijan sauvuz (2015)
+Гусиноозёрск. Буддийский храм - дуган.jpg|Buddizman pühäpert' (dugan) — Tamčin dacanan palakund, vn 2013 nägu
+Гусиноозёрск. Республика Бурятия. Храм в честь вмч. Георгия Победоносца.jpg|Ph. Jurgii Vägestusenkandajan jumalanpert', vn 2016 nägu
+2014-03-31 13-12-31Гусиноозёрск.JPG|Gusinoozerskan GRES vl 2014
+Гусиноозёрск. Железнодорожная улица. ЦРБ..jpg|Rajonan keskuzläžundkodi, sündutamižkodi i rajonan poliklinik jäl'geti Raudteirdal (2014)
+Гусиноозёрск. ДК "Шахтёр"..JPG|«Šaht'or»-kul'turkeskuz (2013, ''Kaivai'')
+</gallery>
 
 == Homaičendad ==
 <references/>
