*Empty MediaWiki Message*

--- a/Gusinoozörsk.mw
+++ b/Gusinoozörsk.mw
@@ -20,7 +20,7 @@
 Eländpunktan aluz om pandud vl 1939 ''Šahtid-radnikžiloks'' ({{lang-ru|Шахты}}) samha [[kivihil'|kivihil't]]. Vspäi 1953 om lidnan statusanke da nügüdläiženke nimenke, nimitadud järven mödhe burätan kelespäi. Vspäi 2000 järedad avol'jaižed löudmižsijad seištas muite pahan kivihilen tagut, vaiše pened kaivuded oma rados.
 
 == Geografijan andmused ==
-Lidn sijadase katl'uses, Hanh'järven pohjoižpäivnouzmaižel randal. Matkad [[Ulan Ude]]hesai om 110 km pohjoižpäivnouzmha federaližedme [[A340 (avtote, Venäma)|A340]]-avtotedme vai «[[Ulanbatar]] — Ulan Ude»-raudtedme. Raudtestancijan nimi om Zagustai ({{lang-ru|Загустай}}, {{lang-bua|Загастай}}), sijadase 6 km lodeheze lidnan keskusespäi. Lähembaižed lidnad oma [[Babuškin (Burätii)|Babuškin]] 66 km lodeheze orhal vai 273 km avtotedme i Ulan Ude.
+Lidn sijadase katl'uses, Hanh'järven pohjoižpäivnouzmaižel randal. Matkad [[Ulan Ude]]hesai om 110 km pohjoižpäivnouzmha federaližedme [[A340 (avtote, Venäma)|A340]]-avtotedme vai «[[Ulanbatar]] — Ulan Ude»-raudtedme. Raudtestancijan nimi om Zagustai ({{lang-ru|Загустай}}, {{lang-bua|Загаһатай}}), sijadase 6 km lodeheze lidnan keskusespäi. Lähembaižed lidnad oma [[Babuškin (Burätii)|Babuškin]] 66 km lodeheze orhal vai 273 km avtotedme i Ulan Ude.
 
 Klimat om terav kontinentaline. Kaks' pen't žilod mülüdas lidnankundha lidnan ližaks: Zagustai-žilo raudtestancijanno i Jarventagaine-žilo ({{lang-ru|Заозёрный}}, enzne sodalidnut).
 
@@ -45,7 +45,7 @@ Gusinoozerskan GRES i energetine tehnikum<ref>[http://gusteh.profiedu.ru/ Gusino
 <references/>
 
 == Irdkosketused ==
-* [http://www.admingus.ru/ Gusinoozerskan lidnankundan oficialine sait (''admingus.ru'').] {{ref-ru}} <small>(+ anglijankel'ne känduz)</small>
+* [http://www.admingus.ru/ Gusinoozerskan lidnankundan oficialine sait (''admingus.ru'').] {{ref-ru}} <small>''(+ anglijankel'ne känduz)''</small>
 {{Commons|Category:Gusinoozersk}}
 
 {{Burätijan Tazovaldkundan lidnad}}
