--- a/Päiväine.mw
+++ b/Päiväine.mw
@@ -10,10 +10,15 @@ Päiväižen südäin: [[vezinik]] (~73% vedusespäi i ~92% mülündmäraspäi),
 Kaik om 26 000 vauktuzvot Päiväižen da [[Maidte]]n galaktikan keskusen keskes; Päiväine punose ümbri Maidtes. Nügüd' Päiväine om meiden galaktikan [[Orionan hijam]]as.
 
 == Päiväižhe sidodud vepsän mustatišed ==
+;Mustatišed
 <blockquote>
+* ''Ei päiväine ühtei ühtes čuraspäi pašta''.
 * ''Kaikele radole pidab aig, aigata i päivoi ei pašta.''
 * ''Päiväine-ki ei ozaida paštta''.
 </blockquote>
+
+;Virkeh
+* ''Ühtes päiväižes hatrad kuivaziba'' (edahaižen pol'ven heimolaižiš)
 
 == Homaičendad ==
 <references />
