*Empty MediaWiki Message*

--- a/Suvi.mw
+++ b/Suvi.mw
@@ -1,6 +1,6 @@
 {{10000}}
 [[Fail:Kompass de S.png|thumb|right|250px|Suvipol' om ozutadud sinižel mujul [[kompas]]an saksankel'žel versijal.]]
-'''Suvi''' ('''S''' anglijan kelen ''south''-nimitusespäi), mugažo '''Kezačura''', runoiš '''Päipol' ''' mugažo, om [[manpoled|manpol']], kudamban azimut om 180 gradusad. Üks' nelläs päižes čuradusespäi. Vastčuraduz om [[pohjoine]].
+'''Suvi''' ('''S''' anglijan kelen ''south''-nimitusespäi), se-žo '''Kezačura''', runoiš '''Päipol' ''' mugažo, om [[manpoled|manpol']], kudamban azimut om 180 gradusad. Üks' nelläs päižes čuradusespäi. Vastčuraduz om [[pohjoine]].
 
 Sijadase [[Suvinaba]]n čuradusen mödhe. Znamoičese geografižil kartoil alahas tobjimalaz istorižiden süiden tagapäi. [[Päiväine]] om suves keskpäiväl.
 
