--- a/Mujezerskii.mw
+++ b/Mujezerskii.mw
@@ -1,45 +1,45 @@
 {{Eländpunkt
  | Nimi = Mujezerskii<br />Муезерский <small>(ven.)</small><br />Mujehdjärvi <small>(karj.)</small><br />Mujejärvi <small>(suom.)</small>
- | Lidnanznam =
- | Flag =
- | Lidnanznam text =
- | Flag text =
+ | Lidnanznam = Muezersky COA (2019).jpg
+ | Flag = Flag of Muezersky.png
+ | Lidnanznam text = Mujezerskijan znam
+ | Flag text = Mujezerskijan flag
  | Valdkund = Venäma
  | Eläjiden lugu = 2,926
  | Voz' = 2016
  | Pind =
  | Fail = Muyezerskii01.jpg
- | Pämez' = Lüdmila Barinkova (2013-)
+ | Pämez' = Lüdmila Barinkova<br/>(2013—)
  | Telefonkod = +7-81455-xx-xxx
  | Avtokod = 10
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
 }}
-'''Mujezerskii''' ([[venäkel'|ven]].: ''Муезерский'', [[karjalan kel'|karj]].: ''Mujehdjärvi'', [[suomen kel'|suom]].: ''Mujejärvi'') om [[Venäma]]n lidnanvuitte žilo [[Karjalan Tazovaldkund]]an keskusen päivlaskmas. Se om [[Mujezerskijan rajon]]an administrativine keskuz da kaikiš suremb eländpunkt, mugažo Mujezerskijan lidnkundan keskuz da sen üks'jäine eländpunkt.
+'''Mujezerskii''' ({{lang-ru|Муезерский}}, {{lang-krc|Mujehdjärvi}}, {{lang-fi|Mujejärvi}}) om [[Venäma]]n lidnanvuitte žilo [[Karjalan Tazovaldkund]]an keskuzpalan päivlaskmas. Se om [[Mujezerskijan rajon]]an administrativine keskuz da kaikiš suremb eländpunkt, mugažo Mujezerskijan lidnkundan keskuz da sen üks'jäine eländpunkt.
 
 == Istorii ==
-Eländpunktan aluz om pandud 16. voz'sadal kuti Mujezero-külä. [[Toine mail'man soda|Toižen mail'man sodan]] aigan külä oli muretud. Vl 1962 [[Päivlaskmaine Karjalan raudte]] ühtenzoiti küläd [[Sojärv (lidn)|Sojärvenke]]. Vl 1965 žilo Mujezerk-raudtestancijanno sai lidnanvuiččen žilon statusad, žilod nimitihe nügüdläižikš.
+Eländpunktan aluz om pandud 16. voz'sadal kuti Mujezero-külä. [[Toine mail'man soda|Toižen mail'man sodan]] aigan külä oli muretud. Vl 1962 [[Päivlaskmaine Karjalan raudte]] ühtenzoiti küläd [[Sojärv (lidn)|Sojärvenke]]. Vl 1965 žilo Mujezerk-raudtestancijanno sai lidnanvuiččen žilon statusad, nimitihe žilod nügüdläižikš.
 
-Vl 1966 tal'vkun 30. päiväl Mujezerskijan rajonan aluz om pandud, Mujezerskii-žilo tegihe sen administrativižeks keskuseks.
+Vl 1966 tal'vkun 30. päiväl Mujezerskijan rajonan aluz om pandud, Mujezerskii-žilo kändihe sen administrativižeks keskuseks.
 
 == Geografijan andmused ==
 Žilo sijadase rajonan keskuses, enččiden [[Reboli]]- da [[Rugjärv (külä)|Rugjärv]]-rajonkeskusiden kesktahos, [[Mujezerk]]-jogen hural randal tobjimalaz. [[Mec]] ümbärdab žilod. Žilon pen' pala sijadase 15 km päivlaskmha Mui-järven lodehližel randal. Matkad [[Petroskoi]]hesai om 270 kilometrad suvipäivnouzmha orhal, 375 km raudtedme, 440 km avtotedme. Lähembaine lidn om [[Kostamukš]], 97 km lodeheze orhal.
 
-Klimat om ven. Voden keskmäine lämuz om +1,3°C.
+Klimat om ven. Voden keskmäine lämuz om +1,3 C°.
 
 == Tobmuz ==
-10 ezitajad mülüdas Lidnkundan Nevondkundha (ven. ''Совет поселения''). Valitihe heid järgenduseližen kerdan vl 2013 sügüz'kun 8. päiväl (koumanz' kucund)<ref>[http://www.karel.vybory.izbirkom.ru/region/karel?action=show&vrn=4104009129228&region=10&prver=0&pronetvd=null Выборы депутатов Муезерского городского поселения третьего созыва (Mujezerskijan lidnkundan ezitajiden valičendad - koumanz' kucund). — Tedod mänijoiš valičendoiš da referendumiš (vybory.izbirkom.ru) // Venälaižen Federacijan keskuzline valičemižlaudkund.] {{ref-ru}}</ref>.
+Kaik 10 ezitajad mülüdas Lidnkundan Nevondkundha ({{lang-ru|Совет поселения}}). Valitihe heid järgenduseližen kerdan vl 2013 sügüz'kun 8. päiväl (koumanz' kucund)<ref>[http://www.karel.vybory.izbirkom.ru/region/karel?action=show&vrn=4104009129228&region=10&prver=0&pronetvd=null Выборы депутатов Муезерского городского поселения третьего созыва (Mujezerskijan lidnkundan ezitajiden valičendad - koumanz' kucund). — Tedod mänijoiš valičendoiš da referendumiš (vybory.izbirkom.ru) // Venälaižen Federacijan keskuzline valičemižlaudkund.] {{ref-ru}}</ref>.
 
 Lüdmila Barinkova radab lidnkundan pämehen vn 2013 sügüz'kun 8. päivän valičendoiden jäl'ghe. Hänen valdatusiden strok om viž vot.
 
 == Eläjad ==
-Kaikiš suremb ristitišt oli vl 1989 — 4 400 eläjad. Vn 2002 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 4 007 ristitud, vl 2010 — 3 328 ristitud. Rajonan ristitišton kaks' seičemendest eläb žilos.
+Kaikiš suremb žilon ristitišt oli 4 400 eläjad vl 1989. Vn 2002 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 4 007 ristitud, vl 2010 — 3 328 ristitud. Rajonan ristitišton kaks' seičemendest eläb žilos.
 
 [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman «Kaiken car'ak»-jumalaižen {{k|ven.: ''«Всецарица»''}} pühäpert' om žilos.
 
 == Ižanduz da transport ==
 Ižandusen sarak oma mecižandusen edheotand.
 
-[[Sojärv (lidn)|Sojärv]] - [[Kostamukš]]-raudte läbitab žilod, ''Mujezerk''-raudtestancii om siš.
+[[Sojärv (lidn)|Sojärv]] — [[Kostamukš]]-raudtekeskust läbitab žilod, ''Mujezerk''-raudtestancii om siš.
 
 Kul'turpert' i rajonan kirjišt oma žilos. Opendusen aluzkundad oma keskškol da čomamahtoiden lapsidenškol.
 
