--- a/Mujezerskii.mw
+++ b/Mujezerskii.mw
@@ -1,7 +1,7 @@
 {{Eländpunkt
- | Nimi = Mujezerskii<br />Муезерский <small>(ven.)</small><br />Mujehdjärvi <small>(karj.)</small><br />Mujejärvi <small>(suom.)</small>
+ | Nimi = Mujezerskii<br />Муезерский <small>(ven.)</small><br />Mujejärvi <small>(karj.)</small><br />Mujejärvi / Muujärvi <small>(suom.)</small>
  | Lidnanznam = Muezersky COA (2019).jpg
- | Flag = Flag of Muezersky.png
+ | Flag = Flag of Muyezersky.png
  | Lidnanznam text = Mujezerskijan znam
  | Flag text = Mujezerskijan flag
  | Valdkund = Venäma
@@ -14,7 +14,7 @@
  | Avtokod = 10
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
 }}
-'''Mujezerskii''' ({{lang-ru|Муезерский}}, {{lang-krc|Mujehdjärvi}}, {{lang-fi|Mujejärvi}}) om [[Venäma]]n lidnanvuitte žilo [[Karjalan Tazovaldkund]]an keskuzpalan päivlaskmas. Se om [[Mujezerskijan rajon]]an administrativine keskuz da kaikiš suremb eländpunkt, mugažo Mujezerskijan lidnkundan keskuz da sen üks'jäine eländpunkt.
+'''Mujezerskii''' ({{lang-ru|Муезерский}}, {{lang-krl|Mujejärvi}}, {{lang-fi|Mujejärvi / Muujärvi}}) om [[Venäma]]n lidnanvuitte žilo [[Karjalan Tazovaldkund]]an keskuzpalan päivlaskmas. Se om [[Mujezerskijan rajon]]an administrativine keskuz da kaikiš suremb eländpunkt, mugažo Mujezerskijan lidnkundan keskuz da sen üks'jäine eländpunkt.
 
 == Istorii ==
 Eländpunktan aluz om pandud 16. voz'sadal kuti Mujezero-külä. [[Toine mail'man soda|Toižen mail'man sodan]] aigan külä oli muretud. Vl 1962 [[Päivlaskmaine Karjalan raudte]] ühtenzoiti küläd [[Sojärv (lidn)|Sojärvenke]]. Vl 1965 žilo Mujezerk-raudtestancijanno sai lidnanvuiččen žilon statusad, nimitihe žilod nügüdläižikš.
